[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[flake8]
exclude=venv
ignore=E203,W503
max-complexity=10
max-line-length=120

[isort]
profile=black
multi_line_output=3
line_length=120